--- a/style.css
+++ b/style.css
@@ -1,78 +1,144 @@
+/* Font */
+@import url('https://fonts.cdnfonts.com/css/valorant');
 body {
-    height: 200vh; /* Pour permettre le défilement */
+    
+    /* Pour permettre le défilement */
     margin: 0;
     padding-top: 0;
     background: linear-gradient(#0F1923, #1D2227);
-}
-
-.header{
-    position: fixed;
-    display: flex;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 100px;
-    background-color: #FF4656;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-}
-
-.logo img{
-    width: 95px;
-    height: 26px;
-
-}
-
-.menu-toggle {
-display: none;
-flex-direction: column;
-cursor: pointer;
-}
-
-.menu-toggle .bar {
-height: 3px;
-width: 25px;
-background-color: #fff;
-margin: 3px 0;
+    font-family: "Josefin Sans", serif;
 }
 
 /* Responsive */
 @media (max-width: 768px) {
-.nav-links {
-display: none;
-flex-direction: column;
-width: 100%;
-position: absolute;
-top: 60px;
-left: 0;
-background-color: #333;
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background-color: #333;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
 }
 
-.nav-links.active {
-display: flex;
+.parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    gap: 8px;   
+}
+
+
+.navbar {
+
+    grid-column: span 5 / span 5;
+    padding: 20px 10px;
+    display: grid;
+    position: fixed;
+    background-color: #FF4656;
+    width: 100vw;
+}
+
+.logosite{
+   width: 100px;
+   position: relative;
+   margin: 0px 30px 0px 10px;
+}
+
+.Riotblanc{
+    width: 100%;
+}
+.Riotrouge{
+    width: 100%;
+}
+.logosite img.Riotrouge{
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    object-fit: contain;
+    opacity: 0;
+    transition: opacity .2s;
+}
+
+.logosite:hover img.Riotrouge{
+    opacity: 1;
+}
+
+
+.logob img{
+    width: 100%;
+}
+
+.logob{
+
+    display: flex;
+    align-items: center;
+    margin: 0px 15px 0px 0px;   
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    align-items: center;
+}
+
+.nav-links li {
+    margin: 0 15px;
+}
+
+.nav-links a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.nav-links a:hover {
+    color: #FF4656;
 }
 
 .menu-toggle {
-display: flex;
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
 }
+
+.menu-toggle .bar {
+    height: 3px;
+    width: 25px;
+    background-color: #fff;
+    margin: 3px 0;
 }
 
 .parallax {
     
-    background-color: black;
+    grid-column: span 3 / span 3;
+    grid-row: span 2 / span 2;
+    grid-column-start: 2;
+    grid-row-start: 2;
+
     margin-top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    position: relative;
-    width: 50%; /* Largeur de l'image */
-    height: 800px; /* Hauteur de l'image */
+
+    width: 100%; /* Largeur de l'image */
+    height: 50%; /* Hauteur de l'image */
     overflow: hidden;
 }
 
 .parallax-img {
-    width: 100%; /* L'image est plus large que son conteneur */
-    height: 100%;
+    width: 900px; /* L'image est plus large que son conteneur */
+    height: 700px;
     object-fit: cover;
 }
