--- a/style_index.css
+++ b/style_index.css
@@ -1,5 +1,6 @@
 /* Font */
 @import url('https://fonts.cdnfonts.com/css/valorant');
+@import url('https://fonts.cdnfonts.com/css/coluna');
 body {
     
      /* Pour permettre le défilement */
